--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serve": "^14.2.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
