--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/light-font": "^0.2.63",
+    "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "moment": "^2.29.4",
     "serve": "^14.2.1",
