--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mdi/light-font": "^0.2.63",
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
+    "dotenv": "^16.3.1",
+    "dotenv-webpack": "^8.0.1",
     "moment": "^2.29.4",
     "serve": "^14.2.1",
     "vue": "^2.6.14",
