# Добавил алерты и доработал регистрацию в вк

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-FRONT_PAGE_URL=https://anton.mlsat.ru/
-BACKEND_URL=https://kamen.mlsat.ru
+FRONT_PAGE_URL=https://red.mlsat.ru/
+BACKEND_URL=https://red.mlsat.ru
 CLIENT_ID=51785736
-REDIRECT_URI=https://anton.mlsat.ru/post-login
+REDIRECT_URI=https://red.mlsat.ru/post-login
 DISPLAY=popup
 RESPONSE_TYPE=code
