--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,13 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
+server {
+    listen       80;
+    server_name  red.techbeaver.ru;
 
-events {
-       worker_connections 768;
-}
-
-
-http {
-       server {
-           listen 80;
-           location / {
-                root   /usr/share/nginx/html;
-                try_files $uri $uri/ /index.html;
-           }
-           location /api {
-             proxy_pass http://backend;
-           }
-       }
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }
+    
+    location /api {
+        proxy_pass http://backend;
+    }
 }
