Добавлено создание групп с курсами и припиской к ним студентов

--- a/urls.env
+++ b/urls.env
@@ -1,2 +1,2 @@
-FRONTEND_URL = https://anton.mlsat.ru/
-BACKEND_URL = https://kamen.mlsat.ru
+FRONTEND_URL = https://anton.techbeaver.ru
+BACKEND_URL = https://kamen.techbeaver.ru
