--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-FRONT_PAGE_URL=https://anton.mlsat.ru/
-BACKEND_URL=https://kamen.mlsat.ru
+FRONT_PAGE_URL=https://anton.techbeaver.ru
+BACKEND_URL=https://kamen.techbeaver.ru
 CLIENT_ID=51785736
 REDIRECT_URI=https://anton.mlsat.ru/post-login
 DISPLAY=popup
