Данные курсов передаются через пропсы

--- a/urls.env
+++ b/urls.env
@@ -1,2 +1,2 @@
 FRONTEND_URL = https://anton.techbeaver.ru
-BACKEND_URL = https://kamen.techbeaver.ru
+BACKEND_URL = https://red-backend.techbeaver.ru
