--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 FRONT_PAGE_URL=https://anton.techbeaver.ru
-BACKEND_URL=https://kamen.techbeaver.ru
+BACKEND_URL=https://red-backend.techbeaver.ru
 CLIENT_ID=51785736
 REDIRECT_URI=https://anton.mlsat.ru/post-login
 DISPLAY=popup
