# Пайп для фронта

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,16 @@
 stages:
-  - deploy
+  - build
+  - deploy-dev
 
-deploy-app:
-  stage: deploy
+deploy-dev-app:
+  stage: deploy-dev
   image: kroniak/ssh-client
+  before_script:
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
+    - chmod 644 ~/.ssh/known_hosts
   script:
-    - echo "Hi"
-  
+    - ssh ${DEV_USER}@${DEV_HOST} "./docker_services/red_schedule/redeploy.sh"
