--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,25 @@
 stages:
   - build
   - deploy-dev
+    
+build-app:
+  stage: build
+  image: docker:20-dind
+  variables:
+    VERSION: 0.0.${CI_PIPELINE_ID}
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: ""
+  services:
+    - name: docker:20-dind
+      alias: docker
+      command: [ "--tls=false" ]
+  before_script:
+    - until docker info; do sleep 1; done
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  script:
+    - docker build --tag $CI_REGISTRY_IMAGE/red/red-frontend:$VERSION .
+    - docker push $CI_REGISTRY_IMAGE/red/red-frontend:$VERSION
 
 deploy-dev-app:
   stage: deploy-dev
@@ -13,4 +32,4 @@ deploy-dev-app:
     - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
     - chmod 644 ~/.ssh/known_hosts
   script:
-    - ssh ${DEV_USER}@${DEV_HOST} "./docker_services/red_schedule/redeploy.sh"
+    - ssh ${DEV_USER}@${DEV_HOST} "export "FRONTEND_VERSION=${VERSION}" /bin/bash -s " < deploy.sh
