--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,23 +5,23 @@ stages:
 variables: 
   VERSION: 0.0.40
     
-#build-app:
-#  stage: build
-#  image: docker:20-dind
-#  variables:
-#    DOCKER_HOST: tcp://docker:2375
-#    DOCKER_DRIVER: overlay2
-#    DOCKER_TLS_CERTDIR: ""
-#  services:
-#    - name: docker:20-dind
-#      alias: docker
-#      command: [ "--tls=false" ]
-#  before_script:
-#    - until docker info; do sleep 1; done
-#    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-#  script:
-#    - docker build --tag $CI_REGISTRY_IMAGE/red/red-frontend:$VERSION .
-#    - docker push $CI_REGISTRY_IMAGE/red/red-frontend:$VERSION
+build-app:
+  stage: build
+  image: docker:20-dind
+  variables:
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: ""
+  services:
+    - name: docker:20-dind
+      alias: docker
+      command: [ "--tls=false" ]
+  before_script:
+    - until docker info; do sleep 1; done
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  script:
+    - docker build --tag $CI_REGISTRY_IMAGE/red/red-frontend:$VERSION .
+    - docker push $CI_REGISTRY_IMAGE/red/red-frontend:$VERSION
 
 deploy-dev-app:
   stage: deploy-dev
