--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,4 +35,8 @@ deploy-dev-app:
     - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
     - chmod 644 ~/.ssh/known_hosts
   script:
-    - ssh ${DEV_USER}@${DEV_HOST} "cd ./docker_services/red_schedule; export "FRONTEND_VERSION=${VERSION}"; /bin/bash -s " < deploy.sh
+    - ssh ${DEV_USER}@${DEV_HOST} 
+      "cd ./docker_services/red_schedule;
+      docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY;
+      export "FRONTEND_VERSION=${VERSION}"; 
+      /bin/bash -s " < deploy.sh
