--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,8 @@ stages:
 #  - build
   - deploy-dev
   
-variables: 
-  VERSION: 0.0.40
+variables:
+  FRONTEND_VERSION: 0.0.40
     
 build-app:
   stage: build
@@ -37,6 +37,9 @@ deploy-dev-app:
   script:
     - ssh ${DEV_USER}@${DEV_HOST} 
       "cd ./docker_services/red_schedule;
-      docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY;
-      export "FRONTEND_VERSION=${VERSION}"; 
+      export "CI_REGISTRY_USER=$CI_REGISTRY_USER";
+      export "CI_REGISTRY_PASSWORD=$CI_REGISTRY_PASSWORD";
+      export "CI_REGISTRY=$CI_REGISTRY"
+      export "CI_REGISTRY_IMAGE=$CI_REGISTRY_IMAGE";
+      export "FRONTEND_VERSION=${FRONTEND_VERSION}"; 
       /bin/bash -s " < deploy.sh
