--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build-app:
       command: [ "--tls=false" ]
   before_script:
     - until docker info; do sleep 1; done
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY .
   script:
     - docker build --tag $CI_REGISTRY_IMAGE/red/red-frontend:$VERSION .
     - docker push $CI_REGISTRY_IMAGE/red/red-frontend:$VERSION
