--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
   - deploy-dev
   
 variables:
-  FRONTEND_VERSION: 0.0.40
+  FRONTEND_VERSION: 0.0.${CI_PIPELINE_ID}
     
 build-app:
   stage: build
