--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 FRONT_PAGE_URL=https://anton.techbeaver.ru
 BACKEND_URL=https://red-backend.techbeaver.ru
 CLIENT_ID=51785736
-REDIRECT_URI=https://anton.mlsat.ru/post-login
+REDIRECT_URI=https://anton.techbeaver.ru/post-login
 DISPLAY=popup
 RESPONSE_TYPE=code
