--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,13 @@
 stages:
-  - build
+  - build-dev
   - deploy-dev
+  - build-prod
   
 variables:
   FRONTEND_VERSION: 0.0.${CI_PIPELINE_ID}
     
-build-app:
-  stage: build
+build-dev-app:
+  stage: build-dev
   image: docker:20-dind
   retry: 2
   variables:
@@ -43,3 +44,24 @@ deploy-dev-app:
       export "CI_REGISTRY_IMAGE=$CI_REGISTRY_IMAGE";
       export "FRONTEND_VERSION=${FRONTEND_VERSION}"; 
       /bin/bash -s " < deploy.sh
+    
+build-prod-app:
+  stage: build-prod
+  image: docker:20-dind
+  when: manual
+  retry: 2
+  variables:
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: ""
+  services:
+    - name: docker:20-dind
+      alias: docker
+      command: [ "--tls=false" ]
+  before_script:
+    - until docker info; do sleep 1; done
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  script:
+    - cat production.prod.env > production.env
+    - docker build --tag $CI_REGISTRY_IMAGE/red/red-frontend-prod:$FRONTEND_VERSION .
+    - docker push $CI_REGISTRY_IMAGE/red/red-frontend-prod:$FRONTEND_VERSION
