--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,10 @@ stages:
   
 variables:
   FRONTEND_VERSION: 0.0.${CI_PIPELINE_ID}
+  GITLAB_API_URL: https://gitlab.nochicorp.com/api/v4
+  TOKEN: glptt-ae8a6645d801a56bf72f70c20f239cb71ca3b37c
+  DEVOPS_REPOSITORY: 13
+  DEVOPS_BRANCH: main
     
 build-dev-app:
   stage: build-dev
@@ -65,3 +69,14 @@ build-prod-app:
     - cat production.prod.env > production.env
     - docker build --tag $CI_REGISTRY_IMAGE/red/red-frontend-prod:$FRONTEND_VERSION .
     - docker push $CI_REGISTRY_IMAGE/red/red-frontend-prod:$FRONTEND_VERSION
+      
+deploy-prod-app:
+  stage: deploy-prod
+  image: alpine:3.19.1
+  before_script:
+    - apk add curl --no-cache
+  script:
+    - curl --request POST \
+      https://gitlab.nochicorp.com/api/v4/projects/$DEVOPS_REPOSITORY/trigger/pipeline?token=$TOKEN&ref=$DEVOPS_BRANCH
+  needs:
+    - build-prod-app
