--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
+    "material-icons": "^1.13.12",
     "moment": "^2.29.4",
     "serve": "^14.2.1",
     "vue": "^2.6.14",
