--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,6 @@ deploy-prod-app:
   before_script:
     - apk add curl --no-cache
   script:
-    - curl --location --request POST \
-      "https://gitlab.nochicorp.com/api/v4/projects/${DEVOPS_REPOSITORY}/trigger/pipeline?token=${TOKEN}&ref=${DEVOPS_BRANCH}"
+    - curl --location --request POST "https://gitlab.nochicorp.com/api/v4/projects/${DEVOPS_REPOSITORY}/trigger/pipeline?token=${TOKEN}&ref=${DEVOPS_BRANCH}"
   needs:
     - build-prod-app
